--- a/ClientApp/src/components/css/CreateDeposit.css
+++ b/ClientApp/src/components/css/CreateDeposit.css
@@ -9,14 +9,38 @@
 }
 
 /*Adds a border to the entire section*/
-.create-client {
-    margin: 0 auto;
-    border: 5px;
+.deposit-page {
+    margin: 0;
+    border: 5vw;
+    padding: 0rem;
 }
 
-.deposit-selector {
+.deposit-error {
+    border: 5vw;
+    margin: 5vw;
+    text-align: center;
+}
+
+/*Sets minimum width for Placeholder text*/
+.deposit-page label {
+    min-width: 80px;
+    max-width: 20vw;
     margin: 0 auto;
-    width: 75%;
+    margin-right: 0;
+    margin-left: 10vw;
+}
+
+.input-group-prepend {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+
+
+.deposit-selector {
+    margin: 0 5vw;
+    margin-left: 0;
+    margin-right: 10vw;
+    width: 50vw;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -30,19 +54,4 @@
     align-items: center;
 }
 
-.dollar-sign {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 10%;
-    height: 22px;
-}
 
-.transaction-input {
-    padding: 0;
-    margin: 0;
-    width: 80%
-}
